Modification code pour "isoler" la partie avec cercles

--- a/zoomable-circle-packing/index.html
+++ b/zoomable-circle-packing/index.html
@@ -3,6 +3,7 @@
 <title>Zoomable Circle Packing</title>
 <link rel="stylesheet" type="text/css" href="./inspector.css">
 <body>
+<div id="test" style="height:50%; width:50%;">
 <script type="module">
 
 import {Runtime, Inspector} from "./runtime.js";
@@ -12,3 +13,5 @@ const runtime = new Runtime();
 const main = runtime.module(define, Inspector.into(document.body));
 
 </script>
+</div>
+</body>
