modification pour avoir une vraie partie "isolée"

--- a/zoomable-circle-packing/index.html
+++ b/zoomable-circle-packing/index.html
@@ -3,7 +3,7 @@
 <title>Zoomable Circle Packing</title>
 <link rel="stylesheet" type="text/css" href="./inspector.css">
 <body>
-<div id="test" style="height:50%; width:50%;">
+<div id="test" >
 <script type="module">
 
 import {Runtime, Inspector} from "./runtime.js";
