modification du code pour avoir le tree et le zoomable... dans le même fichier.
Code à nettoyer...

--- a/zoomable-circle-packing/index.html
+++ b/zoomable-circle-packing/index.html
@@ -20,7 +20,7 @@ const main = runtime.module(define, Inspector.into(document.body));
 </script>
 <!-- load the d3.js library -->
 <!--
-<script type="text/javascript" src="tree.js"> </script>
+<script type="text/javascript" src="test.js"> </script>
 -->
 <style>
 
