--- a/zoomable-circle-packing/index.html
+++ b/zoomable-circle-packing/index.html
@@ -5,7 +5,13 @@
 <body>
       <!-- <input id="entry" type="text" id="search" name="search" onkeyup="refresh_search()" placeholder="Search.."> -->
       <!-- <input id="search" type="text"  placeholder="Search..">   -->
-
+      
+        <form autocomplete="off">
+          <div class="autocomplete" style="width:98%;">
+            <!-- <input id="search" type="text" placeholder="Search .."> -->
+          </div>
+          <!-- <input type="submit"> -->
+        </form>
       <br><br>
 <div id="div1" >
   <svg id="svg1"></svg>
@@ -22,6 +28,9 @@ const runtime = new Runtime();
 const main = runtime.module(define, Inspector.into(document.body));
 
 </script>
+
+<!-- <script src="autocomplete.js"></script> -->
+
 <!-- load the d3.js library -->
 <!--
 <script type="text/javascript" src="test.js"> </script>
@@ -49,6 +58,12 @@ stroke-width: 2px;
 }
 
 
+/*the container must be positioned relative:*/
+.autocomplete {
+  position: relative;
+  display: inline-block;
+}
+
 input[type=text] {
   width: 130px;
   box-sizing: border-box;
@@ -67,6 +82,36 @@ input[type=text] {
 input[type=text]:focus {
   width: 98%;
 }
+
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  /*position the autocomplete items to be the same width as the container:*/
+  top: 100%;
+  left: 0;
+  right: 0;
+  width:98%;
+}
+
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff; 
+  border-bottom: 1px solid #d4d4d4; 
+}
+
+/*when hovering an item:*/
+.autocomplete-items div:hover {
+  background-color: #e9e9e9; 
+}
+
+/*when navigating through the items using the arrow keys:*/
+.autocomplete-active {
+  background-color: DodgerBlue !important; 
+  color: #ffffff; 
+}
 </style>
-</div>
 </body>
